登录-注册弹窗

--- a/src/assets/icons/iconfont.css
+++ b/src/assets/icons/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 5045243 */
-  src: url('iconfont.woff2?t=1760970155509') format('woff2'),
-       url('iconfont.woff?t=1760970155509') format('woff'),
-       url('iconfont.ttf?t=1760970155509') format('truetype');
+  src: url('iconfont.woff2?t=1761132495533') format('woff2'),
+       url('iconfont.woff?t=1761132495533') format('woff'),
+       url('iconfont.ttf?t=1761132495533') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-user:before {
+  content: "\e605";
+}
+
+.icon-yanzhengyanzhengma:before {
+  content: "\e624";
+}
+
+.icon-mima:before {
+  content: "\e8b2";
 }
 
 .icon-sousuo:before {
