--- a/src/assets/icons/iconfont.css
+++ b/src/assets/icons/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 5045243 */
-  src: url('iconfont.woff2?t=1761586445994') format('woff2'),
-       url('iconfont.woff?t=1761586445994') format('woff'),
-       url('iconfont.ttf?t=1761586445994') format('truetype');
+  src: url('iconfont.woff2?t=1761651710946') format('woff2'),
+       url('iconfont.woff?t=1761651710946') format('woff'),
+       url('iconfont.ttf?t=1761651710946') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-more:before {
+  content: "\e61b";
 }
 
 .icon-dongtai:before {
