--- a/src/assets/icons/iconfont.css
+++ b/src/assets/icons/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 5045243 */
-  src: url('iconfont.woff2?t=1761651710946') format('woff2'),
-       url('iconfont.woff?t=1761651710946') format('woff'),
-       url('iconfont.ttf?t=1761651710946') format('truetype');
+  src: url('iconfont.woff2?t=1761982558643') format('woff2'),
+       url('iconfont.woff?t=1761982558643') format('woff'),
+       url('iconfont.ttf?t=1761982558643') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,22 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-UPzhu:before {
+  content: "\e666";
+}
+
+.icon-icon-left:before {
+  content: "\e60b";
+}
+
+.icon-icon-right:before {
+  content: "\e60c";
+}
+
+.icon-shouqi:before {
+  content: "\e68d";
 }
 
 .icon-more:before {
