feat: 新增视频列表组件及图标资源，优化首页布局
- 添加VideoItem、DataLoadMoreList和NaData组件用于视频展示
- 更新图标字体文件，新增hot、play和icon_empty图标
- 重构首页布局，使用新组件展示推荐视频
- 移除未使用的body-inner元素及相关样式
- 优化日期格式化工具函数
- 调整轮播图尺寸计算逻辑

--- a/src/assets/icons/iconfont.css
+++ b/src/assets/icons/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 5045243 */
-  src: url('iconfont.woff2?t=1761982558643') format('woff2'),
-       url('iconfont.woff?t=1761982558643') format('woff'),
-       url('iconfont.ttf?t=1761982558643') format('truetype');
+  src: url('iconfont.woff2?t=1762349279107') format('woff2'),
+       url('iconfont.woff?t=1762349279107') format('woff'),
+       url('iconfont.ttf?t=1762349279107') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,18 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-icon_empty:before {
+  content: "\e64f";
+}
+
+.icon-hot:before {
+  content: "\e60f";
+}
+
+.icon-play:before {
+  content: "\e6f2";
 }
 
 .icon-UPzhu:before {
