--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -2,7 +2,6 @@
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   // background-color: #242424;
@@ -11,6 +10,11 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  --blue:#1890ff;
+  --text:#18191C;
+  --text2:#61666D;
+  --text3:#9499A0;
+  --text4:#C9CCD0;
 }
 
 /* Make layout sizing predictable and prevent accidental horizontal scroll */
@@ -92,3 +96,4 @@ button:focus-visible {
 //     background-color: #f9f9f9;
 //   }
 // }
+
