--- a/src/assets/scss/base.scss
+++ b/src/assets/scss/base.scss
@@ -12,6 +12,7 @@
   -moz-osx-font-smoothing: grayscale;
   --blue:#1890ff;
   --text:#18191C;
+  --text1:#18191C;
   --text2:#61666D;
   --text3:#9499A0;
   --text4:#C9CCD0;
